# flowfine

./: .gitignore  Cargo.toml
.github/workflows/: rust-test.yaml
flowfine/: Cargo.toml
flowfine-core/: Cargo.toml
flowfine-core/src/: lib.rs
flowfine/src/: config.rs  lib.rs  runner.rs
flowfine/src/migration/: lexer.rs  mod.rs  parser.rs
flowfine/src/scanner/: mod.rs  parser.rs  query.rs
flowfine/tests/: runner_test.rs
flowfine/tests/data/int/numeric_migrations/: V1.0__create_table.cql  V1.1__insert_data.cql  V1.2__select_data.cql
flowfine/tests/data/unit/datetime_migrations/: V20230903141501__migration.cql
smt-core/: Cargo.toml
smt-core/src/: config.rs  lib.rs
smt-core/src/scanner/: mod.rs  parser.rs  version.rs
src/: config.rs  main.rs
src/migration/: extractor.rs  migration_extract.rs  migration_parser.rs  mod.rs  parser.rs  validator.rs  version.rs
