[package]
name = "smt-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.11.0"
lazy_static = "1.4.0"
regex = "1.9.4"
chrono = "0.4.27"
thiserror = "1.0"
tokio = { version = "1.12", features = ["full"] }

#tests
rstest = "0.18.2"
